--- a/css/_header.scss
+++ b/css/_header.scss
@@ -11,14 +11,38 @@ header {
             }
         }
 
-        .navbar-nav {
-            .nav-link {
-                color: #fff;
+        .d-flex {
+            flex-grow: 1;
+            max-width: 600px;
+
+            .form-control {
+                width: 100%;
+            }
+
+            .btn-outline-success {
+                color: #0014ee;
+                border-color: #0014ee;
 
                 &:hover {
-                    color: $secondary-color;
+                    background-color: #0014ee;
+                    color: #fff;
+                }
+            }
+        }
+
+        .navbar-nav {
+            .nav-link {
+                color: #494949;
+
+                &:hover {
+                    color: $navbarsecondary-color;
                 }
             }
         }
     }
+}
+
+.header-line {
+    height: 5px;
+    background-color: #0014ee;
 }
