--- a/css/main.css
+++ b/css/main.css
@@ -1,47 +1,37 @@
-.site-header {
-  background-color: #ffffff;
-  border-bottom: 1px solid #ddd;
+header {
+  background: rgb(0, 12, 12);
 }
-.site-header .site-logo img {
+header .navbar {
+  padding: 1rem 0;
+}
+header .navbar .navbar-brand img {
   max-height: 50px;
 }
-.site-header .main-navigation .nav-menu {
-  display: flex;
-  gap: 20px;
+header .navbar .d-flex {
+  flex-grow: 1;
+  max-width: 600px;
 }
-.site-header .main-navigation .nav-menu li {
-  list-style: none;
+header .navbar .d-flex .form-control {
+  width: 100%;
 }
-.site-header .main-navigation .nav-menu a {
-  text-decoration: none;
-  color: #333;
-  font-weight: 600;
-  padding: 5px 10px;
+header .navbar .d-flex .btn-outline-success {
+  color: #0014ee;
+  border-color: #0014ee;
 }
-.site-header .main-navigation .nav-menu a:hover {
-  color: #007bff;
-}
-.site-header .header-search {
-  display: flex;
-  align-items: center;
-}
-.site-header .header-search input[type=search] {
-  border: 1px solid #ddd;
-  padding: 5px 10px;
-  border-radius: 20px;
-  outline: none;
-}
-.site-header .header-search button {
-  background-color: #007bff;
+header .navbar .d-flex .btn-outline-success:hover {
+  background-color: #0014ee;
   color: #fff;
-  border: none;
-  border-radius: 20px;
-  padding: 5px 15px;
-  margin-left: 5px;
-  cursor: pointer;
 }
-.site-header .header-search button:hover {
-  background-color: #0056b3;
+header .navbar .navbar-nav .nav-link {
+  color: #494949;
+}
+header .navbar .navbar-nav .nav-link:hover {
+  color: rgb(37, 37, 37);
+}
+
+.header-line {
+  height: 5px;
+  background-color: #0014ee;
 }
 
 .thumbnail-container {
