--- a/css/_header.scss
+++ b/css/_header.scss
@@ -1,19 +1,23 @@
 // _header.scss
+$header-padding: 2px; // Adjust this value to control the header thickness
+$searchbar-padding: 4px; // Adjust this value to control the search bar padding
+
 header {
-    background: $primary-background;
+    padding: $header-padding;
 
     .navbar {
         padding: 1rem 0;
 
         .navbar-brand {
             img {
-                max-height: 50px;
+                max-height: 5%;
             }
         }
 
         .d-flex {
             flex-grow: 1;
             max-width: 600px;
+            padding: $searchbar-padding;
 
             .form-control {
                 width: 100%;
@@ -24,8 +28,12 @@ header {
                 border-color: #0014ee;
 
                 &:hover {
-                    background-color: #0014ee;
-                    color: #fff;
+                    background-color: #e0e0e0;
+                    color: #0014ee;
+                }
+
+                img {
+                    max-width: 20px;
                 }
             }
         }
@@ -44,5 +52,47 @@ header {
 
 .header-line {
     height: 5px;
-    background-color: #0014ee;
+    background-color: #6e7aff;
+}
+
+// Search bar styles
+.search-form {
+    position: relative;
+    width: 100%;
+
+    .search-field {
+        width: calc(100% - 40px); // Adjust as needed for padding
+        padding: 0.5rem;
+        border: 1px solid #ccc;
+        border-radius: 0;
+        color: #333;
+        background-color: #fff;
+    }
+
+    .search-submit {
+        position: absolute;
+        right: 0;
+        top: 0;
+        width: 40px;
+        height: 100%;
+        border: none;
+        background: transparent;
+        cursor: pointer;
+        padding: 0.5rem;
+
+        img {
+            display: block;
+            margin: auto;
+            max-width: 100%;
+            max-height: 100%;
+        }
+
+        &:hover {
+            background-color: #e0e0e0;
+        }
+    }
+
+    .search-field::placeholder {
+        color: #ccc;
+    }
 }
