--- a/css/main.css
+++ b/css/main.css
@@ -1,15 +1,16 @@
 header {
-  background: rgb(0, 12, 12);
+  padding: 2px;
 }
 header .navbar {
   padding: 1rem 0;
 }
 header .navbar .navbar-brand img {
-  max-height: 50px;
+  max-height: 5%;
 }
 header .navbar .d-flex {
   flex-grow: 1;
   max-width: 600px;
+  padding: 4px;
 }
 header .navbar .d-flex .form-control {
   width: 100%;
@@ -19,8 +20,11 @@ header .navbar .d-flex .btn-outline-success {
   border-color: #0014ee;
 }
 header .navbar .d-flex .btn-outline-success:hover {
-  background-color: #0014ee;
-  color: #fff;
+  background-color: #e0e0e0;
+  color: #0014ee;
+}
+header .navbar .d-flex .btn-outline-success img {
+  max-width: 20px;
 }
 header .navbar .navbar-nav .nav-link {
   color: #494949;
@@ -31,7 +35,46 @@ header .navbar .navbar-nav .nav-link:hover {
 
 .header-line {
   height: 5px;
-  background-color: #0014ee;
+  background-color: #6e7aff;
+}
+
+.search-form {
+  position: relative;
+  width: 100%;
+}
+.search-form .search-field {
+  width: calc(100% - 40px);
+  padding: 0.5rem;
+  border: 1px solid #ccc;
+  border-radius: 0;
+  color: #333;
+  background-color: #fff;
+}
+.search-form .search-submit {
+  position: absolute;
+  right: 0;
+  top: 0;
+  width: 40px;
+  height: 100%;
+  border: none;
+  background: transparent;
+  cursor: pointer;
+  padding: 0.5rem;
+}
+.search-form .search-submit img {
+  display: block;
+  margin: auto;
+  max-width: 100%;
+  max-height: 100%;
+}
+.search-form .search-submit:hover {
+  background-color: #e0e0e0;
+}
+.search-form .search-field::-moz-placeholder {
+  color: #ccc;
+}
+.search-form .search-field::placeholder {
+  color: #ccc;
 }
 
 .thumbnail-container {
@@ -112,4 +155,40 @@ header .navbar .navbar-nav .nav-link:hover {
   background-color: #007bff;
   color: #fff;
   font-weight: bold;
+}
+
+.search-form {
+  position: relative;
+  width: 100%;
+}
+.search-form .search-field {
+  width: calc(100% - 50px);
+  padding: 0.5rem;
+  border: 1px solid #ccc;
+  border-radius: 0;
+  color: #333;
+  background-color: #fff;
+}
+.search-form .search-submit {
+  position: absolute;
+  right: 0;
+  top: 0;
+  width: 40px;
+  height: 100%;
+  border: none;
+  background: transparent;
+  cursor: pointer;
+}
+.search-form .search-submit:before {
+  content: url("<?php echo get_template_directory_uri(); ?>/images/search-line-icon.png");
+  display: block;
+  width: 20px;
+  height: 20px;
+  margin: auto;
+}
+.search-form .search-field::-moz-placeholder {
+  color: #ccc;
+}
+.search-form .search-field::placeholder {
+  color: #ccc;
 }/*# sourceMappingURL=main.css.map */
